# Velutan-image-manager-obs

./: CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  RELEASE_GUIDE.md  Velutan-Installer.ps1  create-installer.bat  installer.nsi  prepare-release.ps1  quick-release.bat
.github/workflows/: release.yml
data/locale/: en-US.ini
release/: INSTALL.txt  README.md  RELEASE_DESCRIPTION.md  RELEASE_NOTES_v1.1.0.md  SHA256SUMS.txt  SHA256SUMS_v1.1.0.txt
release/v/manual/: INSTALL.txt
release/v/manual/data/locale/: tr-TR.ini
release/v1.0.0/data/: velutan_library.json
release/v1.0.0/data/locale/: en-US.ini
src/: asset_library.cpp  asset_library.hpp  dock_widget.cpp  dock_widget.hpp  module.cpp  obs_integration.cpp  obs_integration.hpp  persistence.cpp  persistence.hpp  setup_dialog.cpp  setup_dialog.hpp  theme_constants.hpp
src/ui/: AssetList.cpp  AssetList.hpp  GridSettingsDialog.cpp  GridSettingsDialog.hpp  HeaderBar.cpp  HeaderBar.hpp  PinnedSourcesDialog.cpp  PinnedSourcesDialog.hpp  Toast.cpp  Toast.hpp  TutorialCard.cpp  TutorialCard.hpp
